--- a/_config.yml
+++ b/_config.yml
@@ -69,9 +69,9 @@ author:
 social-network-links:
   rss: true
   email: "jjang010@hotmail.com"
-  facebook: deanattali
+  facebook: 
   github: daattali
-  twitter: daattali
+  twitter: 
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
